fix spacing of next videos section list items on desktop site

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,9 @@
     display: flex;
     justify-content: space-between;
   }
+  @include desktop {
+    padding: 0 3.5rem;
+  }
   &__right-controls {
     display: flex;
     align-items: center;
