--- a/src/components/VideoListItem/VideoListItem.scss
+++ b/src/components/VideoListItem/VideoListItem.scss
@@ -7,6 +7,9 @@
   @include tablet {
     width: 25rem;
   }
+  @include desktop {
+    width: 100%;
+  }
   &__img {
     width: 30vw;
     max-width: 10rem;
@@ -17,6 +20,9 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 0 1rem;
+    @include desktop {
+      padding: 0 0 0 1rem;
+    }
   }
   &__title {
     font-weight: 600;
